Migration from pairs that contains wrappers of primitive types to the wrappers that contain primitive type. (#98)